# OrthoSense

./: .dockerignore  .env  .flutter-plugins-dependencies 2  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  DEPLOY.md  Dockerfile.flutter  GEMINI.md  LICENSE  README.md  analysis_options.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.sonarqube.yml  docker-compose.yml  orthosense.db  pubspec.yaml  sonar-project.properties  sonarqube-quality-gate.json  todo
backend/: .bandit  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.minimal  coverage.xml  mypy-report.xml  pyproject.toml  test-results.xml
backend/.benchmarks/: perf_test_iphone14pro.json  perf_test_iphone16.json  real_api_results_20260121_210529.json
backend/.scannerwork/: report-task.txt
backend/app/: __init__.py  main.py  requirements od zosi.txt
backend/app/ai/: __init__.py  requirements.txt  run_live_cam.py  run_video_analysis.py
backend/app/ai/core/: __init__.py  config.py  convert_to_tflite.py  diagnostics.py  engine.py  integrity.py  model.py  pose_estimation.py  system.py  utils.py  voice.py
backend/app/ai/model_training/: pretrain_kimore.py  train_uiprmd.py
backend/app/ai/models/: best_arms_model.keras  best_legs_model.keras  class_mapping_arms.json  class_mapping_legs.json  kimore_pretrained.weights.h5  lstm_best_model.pt
backend/app/api/v1/: router.py
backend/app/core/: __init__.py  ai_system.py  config.py  database.py  deps.py  exceptions.py  logging.py  rate_limit.py  sanitizer.py  security.py
backend/app/models/: __init__.py  analysis.py  exercise.py  exercise_video.py  measurement.py  protocol.py  session.py  treatment_plan.py  user.py
backend/app/services/: email.py
backend/tests/: __init__.py  conftest.py  test_analysis_endpoints.py  test_api.py  test_auth.py  test_diagnostics.py  test_e2e_video_analysis.py  test_measurements.py  test_performance.py  test_pose_estimation.py  test_rate_limit_unit.py  test_security.py  test_security_owasp.py
backend/tests/e2e/: __init__.py  conftest.py  test_analysis_pipeline.py  test_exercise_flow.py
backend/tests/e2e_api/: __init__.py  conftest.py  test_auth_flow.py  test_error_handling.py  test_exercise_flow.py
backend/tests/integration/: __init__.py  conftest.py  test_ai_system.py  test_auth_session_exercise_flow.py  test_concurrent_sessions.py  test_email_integration.py  test_exercise_video_integration.py  test_full_session_flow.py  test_redis_rate_limit.py  test_session_repository.py  test_session_workflow.py  test_user_repository.py
backend/tests/models/: test_user_model.py
backend/tests/services/: test_email_service.py
backend/tests/unit/: test_sanitizer.py
backend/tests/unit/ai/: __init__.py  test_diagnostics.py  test_diagnostics_extended.py  test_engine.py  test_engine_extended.py  test_integrity.py  test_integrity_extended.py  test_movement_diagnostician.py  test_system.py  test_system_extended.py
backend/tests/unit/api/: test_analysis.py  test_analysis_extended.py  test_analysis_full.py  test_analytics.py  test_auth_endpoints.py  test_auth_full.py  test_auth_users_full.py  test_exercises.py  test_exercises_crud.py  test_exercises_full.py  test_health.py  test_sessions.py  test_sessions_full.py  test_videos.py
backend/tests/unit/core/: test_ai_system.py  test_config.py  test_deps.py  (+9 more)
(+520 files in other folders)
