[project]
name = "orthosense-backend"
version = "0.1.0"
description = "OrthoSense Telerehabilitation Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.9.0",
    "python-multipart>=0.0.12",
    # AI dependencies (headless server)
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "tensorflow-cpu>=2.16.0",
    "h5py>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "greenlet>=3.1.0",
]
# Optional: for server-side image processing if needed
ai-vision = [
    "opencv-python-headless>=4.10.0",
    "mediapipe>=0.10.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (standard FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
