[project]
name = "orthosense-backend"
version = "0.1.0"
description = "OrthoSense Telerehabilitation Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.125.0",
    "uvicorn[standard]>=0.38.0",
    "sqlmodel>=0.0.27",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.0",
    "aiofiles>=24.1.0",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.10.1",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.21",
    "greenlet>=3.3.0",
    "numpy>=1.26.0",
    "boto3>=1.35.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]

dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.14.9",
    "mypy>=1.15.0",
    "greenlet>=3.3.0",
    "types-aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (standard FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
